added forms to add/edit customers and movies

--- a/Vidly/Views/Customers/Index.cshtml
+++ b/Vidly/Views/Customers/Index.cshtml
@@ -5,6 +5,7 @@
 }
 
 <h2>Customers</h2>
+@Html.ActionLink("New Customer", "New", "Customers", null, new { @class = "btn btn-primary btn-lg active" })
 @if (Model.Customers.Count > 0)
 {
     <table class="table	table-bordered table-hover">
