--- a/Vidly/Views/Movies/Index.cshtml
+++ b/Vidly/Views/Movies/Index.cshtml
@@ -4,6 +4,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <h2>Movies</h2>
+@Html.ActionLink("New Movie", "New", "Movies", null, new { @class = "btn btn-primary btn-lg active" })
 <table class="table	table-bordered	table-hover">
     <tr>
         <th>Movie</th>
@@ -12,7 +13,7 @@
     @foreach (var movie in Model.Movies)
     {
         <tr>
-            <td>@Html.ActionLink(@movie.Name, "Details", new { id = @movie.Id })</td>
+            <td>@Html.ActionLink(@movie.Name, "Edit", new { id = @movie.Id })</td>
             <td>@movie.Genre.Name</td>
         </tr>
     }
